# PyNarrator

./: .pre-commit-config.yaml  PyNarrator.spec  README.md  cli.py  makefile  pyproject.toml
dialog/: end.toml  root.toml
dialog/A/: perdir_menu.toml
dialog/A/A/: perdir_bebida_menu.toml
dialog/A/B/: perdir_comida.toml
dialog/A/C/: sugestao.toml
dialog/B/: pedir_bebida.toml
dialog/B/A/: continuar_pedido.toml
dialog/C/: esperar.toml
dialog/C/A/: chamar_garcon.toml
hooks/: hook-translate.py  hook_resizer.py  hook_translate.py
pynarrator/: config.py  logger.py  main.py  translate_hook.py
pynarrator/controller/: __init__.py  base.py  controller.py  game.py  language_menu.py  menu.py  name_screen.py
pynarrator/model/: __init__.py  dialog.py
pynarrator/view/: __init__.py  base.py  dialog.py  game.py  language_menu.py  menu.py  mixin.py  name_screen.py  start.py
tests/model/: test_dialog.py
